--- a/.github/workflows/nightly-release.yml
+++ b/.github/workflows/nightly-release.yml
@@ -14,14 +14,11 @@ jobs:
     steps:
       - name: Get current date
         id: date
-        run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
-
-  release:
-    needs: [ prepare ]
-    uses: andelf/logseq/.github/workflows/build-desktop-release.yml@master
-    with:
-      tag-version: nightly-"${{ jobs.prepare.steps.date.outputs.date }}"
-      git-ref: "master"
-      is-draft: true
-      is-pre-release: true
-      release-channel: Nightly-"${{ jobs.prepare.steps.date.outputs.date }}"
+        run: echo DATE=$(date +'%Y-%m-%d') >> $GITHUB_ENV
+      - uses: andelf/logseq/.github/workflows/build-desktop-release.yml@master
+        with:
+          tag-version: nightly-${{ env.DATE }}
+          git-ref: "master"
+          is-draft: true
+          is-pre-release: true
+          release-channel: "Nightly-${{ env.DATE }}"
