--- a/.github/workflows/nightly-release.yml
+++ b/.github/workflows/nightly-release.yml
@@ -1,4 +1,4 @@
-name: Nightly-Release
+name: Manual-Release
 
 on:
   schedule:
@@ -14,11 +14,13 @@ jobs:
     steps:
       - name: Get current date
         id: date
-        run: echo DATE=$(date +'%Y-%m-%d') >> $GITHUB_ENV
-      - uses: andelf/logseq/.github/workflows/build-desktop-release.yml@master
-        with:
-          tag-version: nightly-${{ env.DATE }}
-          git-ref: "master"
-          is-draft: true
-          is-pre-release: true
-          release-channel: "Nightly-${{ env.DATE }}"
+        run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
+
+  release:
+    uses: andelf/logseq/.github/workflows/build-desktop-release.yml@master
+    with:
+      tag-version: v8.8.8
+      git-ref: "master"
+      is-draft: true
+      is-pre-release: true
+      release-channel: nightly
