--- a/.github/workflows/manual-release.yml
+++ b/.github/workflows/manual-release.yml
@@ -33,8 +33,8 @@ jobs:
   release:
     uses: andelf/logseq/.github/workflows/build-desktop-release.yml@master
     with:
-      tag-version: "${{ github.event.inputs.tag-version }}"
-      git-ref: "${{ github.event.inputs.git-ref }}"
-      is-draft: "${{ github.event.inputs.is-draft }}"
-      is-pre-release: "${{ github.event.inputs.is-pre-release }}"
-      release-channel: "${{ github.event.inputs.release-channel }}"
+      tag-version: "${{ inputs.tag-version }}"
+      git-ref: "${{ inputs.git-ref }}"
+      is-draft: "${{ inputs.is-draft }}"
+      is-pre-release: "${{ inputs.is-pre-release }}"
+      release-channel: "${{ inputs.release-channel }}"
